--- a/MaratonandoApp/Client/Shared/MainLayout.razor
+++ b/MaratonandoApp/Client/Shared/MainLayout.razor
@@ -1,8 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div class="sidebar" style="display:flex; flex-direction:column; justify-content: space-between;">
         <NavMenu />
+        <Sincronizador />
     </div>
 
     <div class="main">
