--- a/MaratonandoApp/Client/_Imports.razor
+++ b/MaratonandoApp/Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using MaratonandoApp.Shared.Models.User
 @using MaratonandoApp.Shared.Models.Series
 @using Microsoft.AspNetCore.Authorization
+@using MaratonandoApp.Client.Helpers
