--- a/MaratonandoApp/Client/Shared/NavMenu.razor
+++ b/MaratonandoApp/Client/Shared/NavMenu.razor
@@ -1,39 +1,41 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">MaratonandoApp</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿<div>
+    <div class="top-row pl-4 navbar navbar-dark">
+        <a class="navbar-brand" href="">MaratonandoApp</a>
+        <button class="navbar-toggler" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <AuthorizeView>
-            <Authorized>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="Biblioteca" Match="NavLinkMatch.All">
-                        <span class="oi oi-book" aria-hidden="true"></span> Biblioteca
-                    </NavLink>
-                </li>
-            </Authorized>
-            <NotAuthorized>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="oi oi-home" aria-hidden="true"></span> Home
-                    </NavLink>
-                </li>
-            </NotAuthorized>
-        </AuthorizeView>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="FilmCatalog">
-                <span class="oi oi-video" aria-hidden="true"></span> Filmes
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="SeriesCatalog">
-                <span class="oi oi-monitor" aria-hidden="true"></span> Series
-            </NavLink>
-        </li>
-    </ul>
+    <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+        <ul class="nav flex-column">
+            <AuthorizeView>
+                <Authorized>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="Biblioteca" Match="NavLinkMatch.All">
+                            <span class="oi oi-book" aria-hidden="true"></span> Biblioteca
+                        </NavLink>
+                    </li>
+                </Authorized>
+                <NotAuthorized>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                            <span class="oi oi-home" aria-hidden="true"></span> Home
+                        </NavLink>
+                    </li>
+                </NotAuthorized>
+            </AuthorizeView>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="FilmCatalog">
+                    <span class="oi oi-video" aria-hidden="true"></span> Filmes
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="SeriesCatalog">
+                    <span class="oi oi-monitor" aria-hidden="true"></span> Series
+                </NavLink>
+            </li>
+        </ul>
+    </div>
 </div>
 
 @code {
