--- a/MaratonandoApp/Client/Shared/Sincronizador.razor
+++ b/MaratonandoApp/Client/Shared/Sincronizador.razor
@@ -19,7 +19,7 @@
                 <div>Sincronizações em espera: @emEspera</div>
                 @if (emEspera > 0)
                 {
-                    <button @onclick="sincronizarClick">Sicronizar</button>
+                    <button @onclick="sincronizarClick">Sincronizar</button>
                 }
             }
 
